<resources>
    <string name="app_name">Halfway!</string>
    <string name="title">HalfWay!</string>
    <string name="goodMorning">Good Morning,</string>
    <string name="goodAfternoon">Good Afternoon,</string>
    <string name="location">Location</string>
    <string name="yourLocation">Your Location</string>
    <string name="friendsLocation">Friend\'s Location</string>
    <string name="radius">Radius</string>
    <string name="find">Find</string>
    <string name="diningAndDrinking">Dining and Drinking</string>
    <string name="landmarksAndOutdoors">Landmarks and Outdoors</string>
    <string name="entertainment">Entertainment</string>
    <string name="clickHere">Click Here to select location</string>
    <string name="allPlaces">All Places,</string>
    <string name="name">Name</string>
    <string name="type">(Type)</string>
    <string name="distance_from">Distance from Middle Point</string>
    <string name="distance_meters">100 Meters</string>
<!--    <string name="view_map">View On Map</string>-->
    <string name="view_map">Get Directions</string>
    <string name="select_location">Select A Location</string>

    <!--  dining and drinking fragment  -->
    <string name="category_bar">Bar</string>
    <string name="category_bakery">Bakery</string>
    <string name="category_cafe">Cafe</string>
    <string name="category_coffee_shop">Coffee Shop</string>
    <string name="category_tea_room">Tea Room</string>
    <string name="category_cafeteria">Cafeteria</string>
    <string name="category_dessert_shop">Dessert Shop</string>
    <string name="category_restaurant">Restaurant</string>
    <string name="category_afgan">Afgan</string>
    <string name="category_african">African</string>
    <string name="category_american">American</string>
    <string name="category_asian">Asian</string>
    <string name="category_australian">Australian</string>
    <string name="category_bangladeshi">Bangladeshi</string>
    <string name="category_chinese">Chinese</string>
    <string name="category_dutch">Dutch</string>
    <string name="category_fast_food">Fast Food</string>
    <string name="category_french">French</string>
    <string name="category_indian">Indian</string>
    <string name="category_italian">Italian</string>
    <string name="category_mexican">Mexican</string>

    <string name="restaurant">Restaurants</string>

    <!--  Landmarks and Outdoors  -->
    <string name="category_canal">Canal</string>
    <string name="category_castle">Castle</string>
    <string name="category_dam">Dam</string>
    <string name="category_farm">Farm</string>
    <string name="category_forest">Forest</string>
    <string name="category_garden">Garden</string>
    <string name="category_hill">Hill</string>
    <string name="category_historic">Historic</string>
    <string name="category_lake">Lake</string>
    <string name="category_monument">Monument</string>
    <string name="category_park">Park</string>
    <string name="category_river">River</string>
    <string name="category_structure">Structure</string>

    <!--    Entertainment -->
    <string name="category_amusement_park">Amusement Park</string>
    <string name="category_arcade">Arcade</string>
    <string name="category_casino">Casino</string>
    <string name="category_comedy_club">Comedy Club</string>
    <string name="category_fair">Fair</string>
    <string name="category_movie_theater">Movie Theater</string>
    <string name="category_museum">Museum</string>
    <string name="category_night_club">Night Club</string>
    <string name="category_gaming_cafe">Gaming Cafe</string>
    <string name="category_pool_hall">Pool Hall</string>
    <string name="category_vr_cafe">VR Cafe</string>
    <string name="category_water_park">Water Park</string>
    <string name="category_zoo">Zoo</string>

    <string name="done">Done</string>

    <string name="developed_by">Developed By</string>
    <string name="aarsh_gangulwar">Aarsh Gangulwar</string>
    <string name="select_all">Select All</string>

    <!--    Navigation Drawer-->
    <string name="find_places_near">Find Places Near Your Location</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>